--- a/public/index.html
+++ b/public/index.html
@@ -9,28 +9,31 @@
   <meta name="description" content="Artur Jegorov | ReactJS developer" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Portfolio | Artur</title>
-  <meta name="description" content="Fullstack React.js web developer. Front-end , Back-end , Server-side. Responsive modern websites developer and programmer. Ready to create a user-friendly website for your business! ">
+  <meta property="og:locale" content="en_US"/>
+  <meta name="description" content="Fullstack React.js web developer , freelancer. Front-end , Back-end , Server-side. Responsive modern websites developer and programmer. Ready to create a user-friendly website for your business!"/>
+  <meta name="keywords" content="React js, programmer, freelancer, website, full stack, web developer, build website, artur, jegorov, tilda, wix, wordpress, node js, backend, frontend"/>
 
   <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="Portfolio | Artur Jegorov">
-  <meta itemprop="description" content="Fullstack React.js web developer. Front-end , Back-end , Server-side. Responsive modern websites developer and programmer. Ready to create a user-friendly website for your business!">
+  <meta itemprop="name" content="Portfolio | Artur Jegorov"/>
+  <meta itemprop="description" content="Fullstack React.js web developer. Front-end , Back-end , Server-side. Responsive modern websites developer and programmer. Ready to create a user-friendly website for your business!"/>
   <meta itemprop="image"
-    content="https://i.ibb.co/BBBPZN6/image-2021-06-11-142354.png">
+    content="https://i.ibb.co/BBBPZN6/image-2021-06-11-142354.png"/>
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://soumyajit.vercel.app">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Portfolio | Artur Jegorov">
-  <meta property="og:description" content="Fullstack React.js web developer. Front-end , Back-end , Server-side. Responsive modern websites developer and programmer. Ready to create a user-friendly website for your business!">
+  <meta property="og:url" content="https://arturjegorov.com"/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:title" content="Portfolio | Artur Jegorov"/>
+  <meta property="og:description" content="Fullstack React.js web developer. Front-end , Back-end , Server-side. Responsive modern websites developer and programmer. Ready to create a user-friendly website for your business!"/>
   <meta property="og:image"
-    content="https://i.ibb.co/BBBPZN6/image-2021-06-11-142354.png">
+    content="https://i.ibb.co/BBBPZN6/image-2021-06-11-142354.png"/>
 
   <!-- Twitter Meta Tags -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Portfolio | Artur Jegorov">
-  <meta name="twitter:description" content="Fullstack React.js web developer. Front-end , Back-end , Server-side. Responsive modern websites developer and programmer. Ready to create a user-friendly website for your business!">
+  <meta name="twitter:card" content="summary_large_image"/>
+  <meta property="og:site_name" content="Artur Jegorov Portfolio"/>
+  <meta name="twitter:title" content="Portfolio | Artur Jegorov"/>
+  <meta name="twitter:description" content="Fullstack React.js web developer. Front-end , Back-end , Server-side. Responsive modern websites developer and programmer. Ready to create a user-friendly website for your business!"/>
   <meta name="twitter:image"
-    content="https://i.ibb.co/BBBPZN6/image-2021-06-11-142354.png">
+    content="https://i.ibb.co/BBBPZN6/image-2021-06-11-142354.png"/>
 </head>
 
 <body>
